--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leaf-Fern Matching Game</title>
+  <title>Plants R Cool</title>
   <style>
     :root {
       --primary-color: #2c3e50;
@@ -392,7 +392,7 @@
 
 <body>
   <div class="header">
-    <h1 class="title">Leaf-Fern Matching Game</h1>
+    <h1 class="title">Plants R Cool</h1>
   </div>
 
   <div class="score-container">
